CONFLUENCE-481: Make Confluence resolvers case insensitive