@@ -19,8 +19,8 @@
  */
 package org.xwiki.contrib.confluence.resolvers.internal;
 
+import java.io.IOException;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -32,7 +32,11 @@ import javax.inject.Provider;
 import javax.inject.Singleton;
 
 import org.apache.commons.lang3.StringUtils;
+import org.apache.solr.client.solrj.SolrClient;
+import org.apache.solr.client.solrj.SolrServerException;
+import org.apache.solr.client.solrj.request.schema.SchemaRequest;
 import org.apache.solr.common.SolrDocument;
+import org.slf4j.Logger;
 import org.xwiki.component.annotation.Component;
 import org.xwiki.contrib.confluence.resolvers.ConfluenceSpaceResolver;
 import org.xwiki.contrib.confluence.resolvers.ConfluencePageIdResolver;
@@ -48,6 +52,8 @@ import org.xwiki.query.Query;
 import org.xwiki.query.QueryException;
 import org.xwiki.query.QueryManager;
 import org.apache.solr.client.solrj.response.QueryResponse;
+import org.xwiki.search.solr.Solr;
+import org.xwiki.search.solr.SolrException;
 import org.xwiki.search.solr.SolrUtils;
 
 import com.xpn.xwiki.XWiki;
@@ -70,12 +76,11 @@ public class PageClassConfluenceResolver
     implements ConfluencePageIdResolver, ConfluencePageTitleResolver, ConfluenceSpaceKeyResolver,
     ConfluenceSpaceResolver
 {
-    private static final String SOLR = "solr";
-    private static final String FULLNAME = "fullname";
-
     private static final String CONFLUENCE_PROP = "property.Confluence.Code.ConfluencePageClass.";
     private static final String SPACE = "space_string";
+    private static final String SPACE_LOWER = "space_string_lowercase";
     private static final String TITLE = "title_string";
+    private static final String TITLE_LOWER = "title_string_lowercase";
     private static final String ID = "id_long";
     private static final String SORT_CREATIONDATE = "creationdate asc";
     private static final String STABLE_ID = "stableId_long";
@@ -96,6 +101,15 @@ public class PageClassConfluenceResolver
     @Inject
     private DocumentReferenceResolver<SolrDocument> solrDocumentReferenceResolver;
 
+    @Inject
+    private Solr solr;
+
+    @Inject
+    private Logger logger;
+
+    private boolean caseInsensitiveSupported;
+    private boolean caseInsensitiveSupportedInitialized;
+
     @Override
     public EntityReference getDocumentById(long id) throws ConfluenceResolverException
     {
@@ -105,7 +119,38 @@ public class PageClassConfluenceResolver
     @Override
     public EntityReference getDocumentByTitle(String spaceKey, String title) throws ConfluenceResolverException
     {
-        return getDocument(Map.of(SPACE, spaceKey, TITLE, title), true);
+        return getDocument(
+            isCaseInsensitiveSupported()
+                ? Map.of(SPACE_LOWER, spaceKey.toLowerCase(), TITLE_LOWER, title.toLowerCase())
+                : Map.of(SPACE, spaceKey, TITLE, title),
+            true);
+    }
+
+    private boolean isCaseInsensitiveSupported()
+    {
+        if (caseInsensitiveSupportedInitialized) {
+            return caseInsensitiveSupported;
+        }
+
+        try {
+            // SolrClientInstance.CORE_NAME = "search"
+            SolrClient client = solr.getClient("search");
+            if (client == null) {
+                logger.warn("Could not get the Solr client to check whether case insensitive Solr fields exist");
+                caseInsensitiveSupported = false;
+            } else {
+                new SchemaRequest.DynamicField("*_string_lowercase").process(client);
+                caseInsensitiveSupported = true;
+            }
+        } catch (org.apache.solr.common.SolrException e) {
+            caseInsensitiveSupported = false;
+        } catch (SolrException | SolrServerException | IOException e) {
+            logger.error("Could not check whether case insensitive Solr fields exist", e);
+            return false;
+        }
+
+        caseInsensitiveSupportedInitialized = true;
+        return caseInsensitiveSupported;
     }
 
     private EntityReference getDocument(Map<String, Object> values, boolean andOp)
@@ -118,7 +163,7 @@ public class PageClassConfluenceResolver
             .map(entry -> CONFLUENCE_PROP + entry.getKey() + ':' + solrUtils.toFilterQueryString(entry.getValue()))
             .collect(Collectors.joining(andOp ? " AND " : " OR "));
         try {
-            Query query = queryManager.createQuery("*", SOLR)
+            Query query = queryManager.createQuery("*", "solr")
                 .bindValue("fq", "type:DOCUMENT AND (" + queryString + ")")
                 .bindValue("sort", SORT_CREATIONDATE)
                 .setLimit(1);
@@ -146,7 +191,11 @@ public class PageClassConfluenceResolver
     @Override
     public EntityReference getSpaceByKey(String spaceKey) throws ConfluenceResolverException
     {
-        EntityReference oldestInThisSpace = getDocument(Collections.singletonMap(SPACE, spaceKey), true);
+        EntityReference oldestInThisSpace = getDocument(
+            isCaseInsensitiveSupported()
+                ? Map.of(SPACE_LOWER, spaceKey.toLowerCase())
+                : Map.of(SPACE, spaceKey),
+            true);
         if (oldestInThisSpace == null) {
             return null;
         }
@@ -192,7 +241,7 @@ public class PageClassConfluenceResolver
                 "select p.value from BaseObject o, StringProperty p where "
                     + "o.className = 'Confluence.Code.ConfluencePageClass' and p.id.id = o.id and "
                     + " o.name = :fullname and p.id.name = 'space'",
-                HQL).bindValue(FULLNAME, fullName).setLimit(1);
+                HQL).bindValue("fullname", fullName).setLimit(1);
             if (reference.getRoot().getType() == EntityType.WIKI) {
                 q = q.setWiki(reference.getRoot().getName());
             }
